# cloudctl

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  CODEOWNERS  README.md  SECURITY.md  pyproject.toml  sonar-project.properties
.github/workflows/: publish.yml  security.yml
cctl/: __init__.py  __main__.py
cctl-stub/: LICENSE  README.md  pyproject.toml
cctl-stub/.github/workflows/: publish.yml
cctl-stub/cctl/: main.py
cloudctl/: __init__.py  __main__.py  main.py
cloudctl/agent/: __init__.py  session.py
cloudctl/ai/: agent.py  confidence.py  context.py  data_fetcher.py  debug_engine.py  factory.py  feedback.py  fixer.py
cloudctl/ai/prompts/: cost.py  debug.py  general.py  pipeline.py  security.py
cloudctl/auth/: token_manager.py
cloudctl/commands/: _helpers.py  accounts.py  agent_cmd.py  ai_cmd.py  analytics.py  ask.py  backup.py  compute.py  config.py  containers.py  cost.py  database.py  debug_cmd.py  diff.py  feedback_cmd.py  find.py  iam.py  mcp_cmd.py  messaging.py  monitoring.py  network.py  pipeline.py  profile.py  quotas.py  security.py  storage.py
cloudctl/config/: init_wizard.py  manager.py
cloudctl/debug/: __init__.py  analyzer.py  correlator.py  deployment_detector.py  engine.py  fetcher.py  planner.py  renderer.py  resolver.py
cloudctl/feedback/: __init__.py  applier.py  processor.py  store.py
cloudctl/fixers/: base.py  registry.py
cloudctl/fixers/aws/: cost.py  security.py
cloudctl/fixers/azure/: cost.py  security.py
cloudctl/fixers/gcp/: cost.py  security.py
cloudctl/mcp/: context.py  server.py
cloudctl/mcp/tools/: action.py  ai_tools.py  cost.py  infra.py
cloudctl/output/: formatter.py
cloudctl/providers/: base.py
cloudctl/providers/aws/: provider.py
cloudctl/providers/azure/: provider.py
cloudctl/providers/gcp/: provider.py
cloudctl/resolvers/: account_resolver.py
tests/: conftest.py  test_agent_session.py  test_ai_layer.py  test_aws_security_helpers.py  test_cli_accounts_config.py  test_cli_commands.py  test_cli_storage_pipeline.py  test_commands_compute.py  test_commands_cost.py  test_commands_iam.py  test_commands_messaging.py  test_commands_monitoring.py  test_commands_network.py  test_commands_pipeline.py  test_commands_security.py  test_commands_storage.py  test_config.py  test_database_helpers.py  test_day13_commands.py  test_debug_package.py  test_feedback_package.py  test_fixers.py  test_formatter.py  test_new_features.py  test_resolver.py  test_token_manager.py
tests/e2e/: load_test.sh
tests/e2e/aws/cdk/: app.py  cdk.json
tests/e2e/aws/cdk/handlers/error_4xx/: handler.py
tests/e2e/aws/cdk/handlers/error_5xx/: handler.py
tests/e2e/aws/cdk/handlers/healthy/: handler.py
tests/e2e/aws/cdk/handlers/intermittent/: handler.py
tests/e2e/aws/complex/: .gitignore  main.tf  outputs.tf  scenario1_ecs_alb.tf  scenario2_lambda_vpc.tf  scenario3_sqs_dlq.tf  scenario4_throttle.tf  scenario5_rds_sg.tf  traffic.sh  variables.tf
tests/e2e/aws/complex/handlers/rds_connect/: handler.py
tests/e2e/aws/complex/handlers/sqs_processor/: handler.py
tests/e2e/aws/complex/handlers/throttle/: handler.py
tests/e2e/aws/complex/handlers/vpc_no_nat/: handler.py
tests/e2e/azure/terraform/: main.tf  outputs.tf  variables.tf
tests/e2e/gcp/deployment-manager/: cloud-run-service.jinja  config.yaml
tests/e2e/shared/: Dockerfile  app.py
