[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cctl"
version = "0.2.0a1"
description = "Universal cloud CLI — one command for AWS, Azure, and GCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Harish Guttikonda", email = "cloudctlhq@gmail.com" }
]
keywords = [
    "cloud", "cli", "aws", "azure", "gcp",
    "multicloud", "devops", "sre", "cloudctl"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "boto3>=1.34",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
azure = [
    # Core
    "azure-identity>=1.16",
    "azure-mgmt-compute>=32.0",
    "azure-mgmt-storage>=21.0",
    "azure-mgmt-subscription>=3.0",
    "azure-mgmt-resource>=23.0",
    # Database
    "azure-mgmt-rdbms>=10.0",
    "azure-mgmt-sql>=3.0",
    "azure-mgmt-cosmosdb>=9.0",
    "azure-mgmt-redis>=14.0",
    # Compute extras
    "azure-mgmt-containerservice>=30.0",
    "azure-mgmt-containerinstance>=10.0",
    "azure-mgmt-web>=7.0",
    # Network
    "azure-mgmt-network>=25.0",
    "azure-mgmt-dns>=8.0",
    "azure-mgmt-apimanagement>=10.0",
    # IAM / Security
    "azure-mgmt-authorization>=4.0",
    "azure-mgmt-keyvault>=10.0",
    "azure-mgmt-msi>=7.0",
    "azure-mgmt-security>=5.0",
    # Containers / DevOps
    "azure-mgmt-containerregistry>=10.0",
    # Monitoring
    "azure-mgmt-monitor>=6.0",
    # Messaging / Integration
    "azure-mgmt-servicebus>=8.0",
    "azure-mgmt-eventhub>=10.0",
    "azure-mgmt-logic>=9.0",
    # AI / Analytics
    "azure-mgmt-cognitiveservices>=13.0",
    "azure-mgmt-synapse>=2.0",
    "azure-mgmt-datafactory>=4.0",
    # Cost
    "azure-mgmt-costmanagement>=4.0",
    # Backup
    "azure-mgmt-recoveryservices>=3.0",
]
gcp = [
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
    "google-cloud-storage>=2.0",
    "google-cloud-resource-manager>=1.10",
]
all-clouds = [
    "cctl[azure,gcp]",
]

[project.scripts]
cloudctl = "cloudctl.main:main"

[tool.hatch.build.targets.wheel]
packages = ["cloudctl"]

[project.optional-dependencies.dev]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cloudctl --cov-report=xml:coverage.xml --cov-report=term-missing"

[project.urls]
Homepage   = "https://github.com/cloudctlio/cloudctl"
Repository = "https://github.com/cloudctlio/cloudctl"
Issues     = "https://github.com/cloudctlio/cloudctl/issues"
Changelog  = "https://github.com/cloudctlio/cloudctl/releases"
